# biped001_sim_gazebo

./: .gitignore  readme.md
docs/: beginner_guide.md  implementation.md  minimal_lqr_demo.md
examples/: lqr_minimal_demo.py
src/bp001_control/: package.xml  setup.cfg  setup.py
src/bp001_control/bp001_control/: balance_controller.py
src/bp001_control/config/: balance_controller.yaml
src/bp001_control/launch/: control.launch.py
src/bp001_description/: package.xml  setup.cfg  setup.py
src/bp001_description/config/: joint_names_bp001_description.yaml
src/bp001_description/launch/: launch.py
src/bp001_description/meshes/collision/: base_link.STL  link_lw.STL
src/bp001_description/meshes/visual/: link_rw.STL
src/bp001_description/urdf/: bp001_description.xacro
src/bp001_sim/: package.xml  setup.cfg  setup.py
src/bp001_sim/launch/: sim.launch.py
src/bp001_sim/urdf/: bp001_sim.xacro
src/bp001_sim/worlds/: empty.sdf
