<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bp001_sim</name>
  <version>0.0.0</version>
  <description>Gazebo Sim integration package for the bp001 two-wheeled robot simulation.</description>
  <maintainer email="1970313791@qq.com">umas</maintainer>
  <license>TODO: License declaration</license>

  <depend>robot_state_publisher</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>xacro</depend>
  <depend>rosgraph_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>bp001_control</depend>
  <depend>bp001_description</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
